src/objects/LogEntry__c.object
<CustomObject>
    <fields>
        <fullName>ClassName__c</fullName>
        <externalId>true</externalId>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionStackTrace__c</fullName>
        <label>Exception Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionTypeName__c</fullName>
        <label>Exception Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlowName__c</fullName>
        <externalId>true</externalId>
        <label>Process Builder/Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogTransactionId__c</fullName>
        <formula>Log__r.TransactionId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Transaction ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <referenceTo>Log__c</referenceTo>
        <relationshipLabel>Log Entries</relationshipLabel>
        <relationshipName>Log_Entry_Derps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LoggingLevelOrdinal__c</fullName>
        <label>Logging Level Ordinal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoggingLevel__c</fullName>
        <label>Logging Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LoggingLevel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MessageTruncated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the message was truncated due to being too long to fit into the Message field</inlineHelpText>
        <label>Message Truncated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <externalId>true</externalId>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalId>true</externalId>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentRecord__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + ParentId__c, ParentSobjectType__c, &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentSobjectType__c</fullName>
        <externalId>true</externalId>
        <label>Parent SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceName__c</fullName>
        <formula>IF(
     NOT(ISBLANK(FlowName__c)),
     FlowName__c,
     IF(
         AND(NOT(ISBLANK(ClassName__c)), NOT(ISBLANK(MethodName__c))),
         ClassName__c + &apos;.&apos; + MethodName__c,
         &apos;Unknown/Anonymous Apex&apos;
     )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceType__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>Process Builder/Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IF(
  ISPICKVAL(SourceType__c, &apos;&apos;)
  ,&apos;&apos;
  ,TEXT(SourceType__c) + &apos;: &apos; + SourceName__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TransactionEntryId__c</fullName>
        <externalId>true</externalId>
        <label>Transaction Entry ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TypeImage__c</fullName>
        <formula>IF(
    ISPICKVAL(Type__c, &apos;Exception&apos;),
    IMAGE(&apos;/img/samples/color_red.gif&apos;, &apos;Exception&apos;, 16, 16) + &apos; &apos; + TEXT(Type__c),
    IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;Debug&apos;, 16, 16) + &apos; &apos; + TEXT(Type__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debug</fullName>
                    <color>#33FF33</color>
                    <label>Debug</label>
                </value>
                <value>
                    <fullName>Exception</fullName>
                    <color>#FF0000</color>
                    <label>Exception</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log Entry</label>
    <nameField>
        <label>Log Entry Transaction ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>